--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.33.0",
+    "react-icons": "^5.1.0",
     "react-images-uploading": "^3.1.7",
     "react-perfect-scrollbar": "^1.5.8",
     "react-popper": "^2.3.0",
